Añadir input Color

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<option value="cono">Cono</option>
 			</select>
 		</div>
+		<!--
 		<div>
 			<label>Color: </label>
 			<select id="selectColor" onchange="cambiarColor()">
@@ -24,6 +25,11 @@
 				<option value="rojo">Rojo</option>
 				<option value="azul">Azul</option>
 			</select>
+		</div>
+		-->
+		<div>
+			<label>Color: </label>
+			<input type="color" name="inputColor" id="inputColor" value="#33cc33" onchange="cambiarColor()">
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script>
 		<script src="script.js"></script>
