--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
 		</style>
+		<script src="three.min.js"></script>
 	</head>
 	<body>
 		<div>
@@ -32,6 +33,7 @@
 			<input type="color" name="inputColor" id="inputColor" value="#33cc33" onchange="cambiarColor()">
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script>
+		<script src="three.js"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
