--- a/index.html
+++ b/index.html
@@ -11,9 +11,25 @@
 					}
 			#menu { max-width: 20%;
 					float: left; 
+					font-family: "Lucida Console", monospace;
 				  }
 			.in{
 				width: 50px;
+			}
+			div{
+				margin: 8px 0px;
+			}
+			input{
+				padding: 2px 3px;
+				margin: 2px 3px;
+			}
+			button{
+				width: 35%;
+				padding: 2px;
+				margin: 2% 5%;
+			}
+			label{
+				font-weight: bold;
 			}
 		</style>
 		<script src="three.min.js"></script>
@@ -38,8 +54,11 @@
 			</div>
 			<div> 
 				<label>Luces: </label>
+				<br>
 				<input type="checkbox" id="luz1" value="luz1" checked="" onclick="estadoLRoja()"> Luz Roja
+				<br>
 				<input type="checkbox" id="luz2" value="luz2" checked="" onclick="estadoLAzul()"> Luz Azul
+				<br>
 				<input type="checkbox" id="luz3" value="luz3" checked="" onclick="estadoLVerde()"> Luz Verde
 			</div>
 			<div>
@@ -48,6 +67,7 @@
   				<input class="in" type="number" id="traslacionX" placeholder="x">
   				<input class="in" type="number" id="traslacionY" placeholder="y">
   				<input class="in" type="number" id="traslacionZ" placeholder="z">
+  				<br>
   				<button onclick="trasladarObjeto()">Trasladar</button>
   				<button onclick="restaurarObjeto()">Restaurar</button>
 			</div>
@@ -57,26 +77,9 @@
   				<input class="in" type="number" id="rotacionX" placeholder="x">
   				<input class="in" type="number" id="rotacionY" placeholder="y">
   				<input class="in" type="number" id="rotacionZ" placeholder="z">
+  				<br>
   				<button onclick="rotarObjeto()">Rotar</button>
   				<button onclick="restaurarRotacionObjeto()">Restaurar</button>
-			</div>
-			<div>
-				<label>Trasladar Cámara: </label>
-				<br>
-  				<input class="in" type="number" id="traslacioncX" placeholder="x">
-  				<input class="in" type="number" id="traslacioncY" placeholder="y">
-  				<input class="in" type="number" id="traslacioncZ" placeholder="z">
-  				<button onclick="trasladarCamara()">Trasladar</button>
-  				<button onclick="restaurarCamara()">Restaurar</button>
-			</div>
-			<div>
-				<label>Rotar Cámara: </label>
-				<br>
-  				<input class="in" type="number" id="rotacioncX" placeholder="x">
-  				<input class="in" type="number" id="rotacioncY" placeholder="y">
-  				<input class="in" type="number" id="rotacioncZ" placeholder="z">
-  				<button onclick="rotarCamara()">Rotar</button>
-  				<button onclick="restaurarRotacionCamara()">Restaurar</button>
 			</div>
 			<div>
 				<label>Escalar objeto: </label>
@@ -84,8 +87,13 @@
   				<input class="in" type="number" id="scaleX" placeholder="x" value="1" min="1">
   				<input class="in" type="number" id="scaleY" placeholder="y" value="1" min="1">
   				<input class="in" type="number" id="scaleZ" placeholder="z" value="1" min="1">
+  				<br>
   				<button onclick="tamObjeto()">Escalar</button>
-  				<button onclick="restaurarObjeto()">Restaurar</button>
+  				<button onclick="restaurarTamanioObjeto()">Restaurar</button>
+			</div>
+			<div>
+				<label>Cámara: </label>
+  				<button onclick="restaurarCamara()">Restaurar</button>
 			</div>
 		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script>
