--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script src="three.min.js"></script>
 		<script src="three.js"></script>
 		<script src="OrbitControls.js"></script>
+		<script src="DragControls.js"></script>
 		<script type="text/javascript" src="dat.gui.js"></script>
 		<script src="script.js"></script>
 	</body>
